# gpui-driver

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  gpui-driver-DESIGN.md
.github/workflows/: canary.yml  ci.yml  release.yml
crates/gpui-driver/: Cargo.toml
crates/gpui-driver-cli/: Cargo.toml
crates/gpui-driver-cli/src/: client.rs  main.rs  output.rs
crates/gpui-driver-protocol/: Cargo.toml
crates/gpui-driver-protocol/src/: lib.rs
crates/gpui-driver/src/: discovery.rs  element.rs  handlers.rs  lib.rs  printwindow.rs  registry.rs  server.rs
docs/: spike-a.md  spike-b.md
docs/superpowers/plans/: 2026-06-10-gpui-driver.md  2026-06-11-fallback-and-vendor-tooling.md
examples/demo-app/: Cargo.toml
examples/demo-app/src/: main.rs
examples/spike-a/: Cargo.toml
examples/spike-a/src/: main.rs
skill/: SKILL.md
tools/: update-vendor.sh
