[package]
name = "gpui-driver"
description = "In-process runtime automation server for GPUI applications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gpui-driver-protocol.workspace = true
gpui.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
