[package]
name = "gpui-driver"
description = "In-process runtime automation server for GPUI applications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gpui-driver-protocol.workspace = true
gpui.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
futures.workspace = true
rand.workspace = true
chrono.workspace = true
base64.workspace = true
image.workspace = true
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_Xps",
    "Win32_UI_WindowsAndMessaging",
] }
